Filtering by title, url, code, and visits works

--- a/public/templates/links.html
+++ b/public/templates/links.html
@@ -1,9 +1,24 @@
-<h1>links.html</h1>
+<h1>Links Directory</h1>
 
-<ul>
+<!-- <ul>
   <li ng-repeat='link in links track by link.id'>
     <div>{{ link.title }}</div>
     <div>{{ link.url }} - {{ link.visits }}</div>
     <div><a ng-href="http://localhost:4567/{{ link.code }}">http://localhost:4567/{{ link.code }}</a></div>
   </li>
-</ul>
+</ul> -->
+
+<table class="linkTable">
+  <tr>
+    <th><a href="" ng-click="predicate = 'title'; reverse=!reverse">Title</a></th>
+    <th><a href="" ng-click="predicate = 'url'; reverse=!reverse">URL</a></th>
+    <th><a href="" ng-click="predicate = 'code'; reverse=!reverse">Shortly Link</a></th>
+    <th><a href="" ng-click="predicate = 'visits'; reverse=!reverse">Visits</a></th>
+  </tr>
+  <tr ng-repeat="link in links | orderBy:predicate:reverse">
+    <td>{{link.title}}</td>
+    <td>{{link.url}}</td>
+    <td>http://localhost:4567/{{link.code}}</td>
+    <td>{{link.visits}}</td>
+  </tr>
+</table>
